# computer_view_prototype

./: .gitignore  CMakeLists.txt  README.md  TODO.md
cmd/export_service/: main.c
cmd/ingestion_service/: main.c
cmd/scheduler/: main.c
cmd/worker/: main.c
configs/profiles/: balanced.json  cost_efficient.json  high_throughput.json  low_latency.json
core/common/: errors.h  logging.c  logging.h  memory_pool.c  memory_pool.h  timer.h  types.h
core/infra/: audit.c  audit.h  comparison.c  comparison.h  database.c  database.h  exporter.c  exporter.h  queue_redis.c  queue_redis.h
core/pipeline/: backend_onnx.c  backend_onnx.h  catalog_builder.c  catalog_builder.h  event_detector.c  event_detector.h  frame_sampler.c  frame_sampler.h  inference_backend.h  metrics_collector.c  metrics_collector.h  pipeline.c  pipeline.h  postprocessor.c  postprocessor.h  preprocessor.c  preprocessor.h  tracker.c  tracker.h  trajectory_builder.c  trajectory_builder.h  video_decoder.c  video_decoder.h
deployments/: Dockerfile  docker-compose.yml
scripts/: build.sh  draw_detections.py  render_accident_video.py  setup_db.sql
